# aliter

./: CONTRIBUTING.md  Cargo.toml  README.md  REMAINING_WORK.md
docs/: ir-feedback-analysis.md  native-ir-builder-plan.md
examples/: basic_usage.rs  ir_demo.rs
font_metrics_data/: font_metrics.json  generate_data.js
scripts/: generate_katex_spec_todos.py
src/: array.rs  build_common.rs  builtin_macros.rs  delimiter.rs  dom_tree.rs  expander.rs  font_metrics.rs  font_metrics_data.rs  html.rs  ir.rs  lexer.rs  lib.rs  macr.rs  mathml.rs  mathml_tree.rs  namespace.rs  parse_node.rs  parser.rs  spacing_data.rs  spec.rs  stretchy.rs  style.rs  svg_geometry.rs  symbols.rs  tree.rs  unicode.rs  unicode_scripts.rs  unit.rs  util.rs
src/environments/: array.rs  cd.rs  mod.rs
src/functions/: accent.rs  accent_under.rs  arrow.rs  char.rs  color.rs  cr.rs  def.rs  delimsizing.rs  enclose.rs  font.rs  genfrac.rs  hbox.rs  horiz_brace.rs  href.rs  html_extension.rs  htmlmathml.rs  includegraphics.rs  kern.rs  lap.rs  math.rs  mathchoice.rs  mclass.rs  mod.rs  op.rs  operatorname.rs  ord_group.rs  overline.rs  phantom.rs  raise_box.rs  relax.rs  rule.rs  sizing.rs  smash.rs  sqrt.rs  styling.rs  symbols_op.rs  symbols_ord.rs  text.rs  underline.rs  vcenter.rs  (+1 more)
src/ir/: builder.rs  from_html.rs  mod.rs  to_html.rs  types.rs
tests/: accent_tests.rs  environment_tests.rs  error_tests.rs  font_tests.rs  katex_ported_tests.rs  katex_spec_render.rs  katex_spec_todo.rs  macro_tests.rs  parser_tests.rs  settings_tests.rs  spacing_tests.rs  symbol_tests.rs  unicode_tests.rs
